--- a/UltraDictionaryClient/nbproject/project.properties
+++ b/UltraDictionaryClient/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ultradictionaryclient.UltraDictionaryClient
+main.class=tk.artsakenos.ultradictionary.UD_Test.UD_ClientCallback
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
